// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataList Cell default 1`] = `
<div
  className="pf-c-data-list__cell"
>
  Secondary
</div>
`;

exports[`DataList Cells 1`] = `
<div
  className="pf-c-data-list__item-content"
>
  <Component
    className="data-list-custom"
    id="primary-item"
    key="list-id-1"
  >
    Primary Id
  </Component>
  <Component
    className="data-list-custom"
    id="primary-item"
    key="list-id-2"
  >
    Primary Id 2
  </Component>
</div>
`;

exports[`DataList DataListAction button 1`] = `
<div
  className="pf-c-data-list__item-action"
>
  <Component
    id="delete-item-1"
  >
    Delete
  </Component>
</div>
`;

exports[`DataList DataListAction dropdown 1`] = `
<div
  className="pf-c-data-list__item-action"
>
  <Component
    dropdownItems={
      Array [
        <Unknown
          component="button"
          onClick={[MockFunction]}
        >
          action-1
        </Unknown>,
        <Unknown
          component="button"
          onClick={[MockFunction]}
        >
          action-2
        </Unknown>,
      ]
    }
    isPlain={true}
    position="right"
    toggle={<Unknown />}
  />
</div>
`;

exports[`DataList DataListContent 1`] = `
<section
  aria-label="Primary Content Details"
  className="pf-c-data-list__expandable-content"
  hidden={false}
  id=""
>
  <div
    className="pf-c-data-list__expandable-content-body"
  >
     test
  </div>
</section>
`;

exports[`DataList DataListContent noPadding 1`] = `
<section
  aria-label="Primary Content Details"
  className="pf-c-data-list__expandable-content"
  hidden={true}
  id=""
>
  <div
    className="pf-c-data-list__expandable-content-body pf-m-no-padding"
  >
    test
  </div>
</section>
`;

exports[`DataList Item 1`] = `
<li
  aria-labelledby="item-1"
  className="pf-c-data-list__item data-list-item-custom"
/>
`;

exports[`DataList Item default 1`] = `
<li
  aria-labelledby="item-1"
  className="pf-c-data-list__item"
/>
`;

exports[`DataList List 1`] = `
<ul
  aria-label="this is a simple list"
  className="pf-c-data-list data-list-custom"
/>
`;

exports[`DataList List default 1`] = `
<ul
  aria-label="this is a simple list"
  className="pf-c-data-list"
/>
`;

exports[`DataList item row default 1`] = `
<div
  className="pf-c-data-list__item-row"
/>
`;
